src/tests/testfiles/variable-declarations/10.txt
testfiles/variable-declarations/10.c:16:5: error: incompatible types when assigning to type 'char *' from type 'char'
h = 'n'; //error
^
testfiles/variable-declarations/10.c:17:5: error: incompatible types when assigning to type 'char *' from type 'int'
h = 8; // error
^
